# FalseUnionEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
Builder/cpp/: Builder.cpp
Engine/Headers/Core/: Timer.h
Engine/Headers/ECS/: Attribute.h
Engine/Headers/Graphics/: Shader.h  Sprite.h
Engine/Headers/Math/: Vector2.h
Engine/cpp/Core/: Logger.cpp
Engine/cpp/Graphics/: Renderer.cpp
FalseUnion/GameEngineSolution/: FalseUnion.sln  GameEngineSolution.sln  GenerateProjects.bat  premake5.lua
FalseUnion/GameEngineSolution/FalseUnion/: FalseUnion.vcxproj  FalseUnion.vcxproj.filters
FalseUnion/GameEngineSolution/FalseUnion/Builder/Header/: Builder.h
FalseUnion/GameEngineSolution/FalseUnion/src/: CMakeLists.txt  Entrypoint.h  FalseUnion.h  Test.cpp
FalseUnion/GameEngineSolution/Sandbox/: CMakeLists.txt  Sandbox.cpp  Sandbox.vcxproj  main.cpp
FalseUnion/GameEngineSolution/Sandbox/src/: Sandbox.cpp
FalseUnion/GameEngineSolution/bin-int/Debug-windows-x86_64/FalseUnion/: FalseUnion.dll.recipe  vc143.idb
FalseUnion/GameEngineSolution/bin-int/Debug-x64/FalseUnion/: FalseUnion.dll.recipe  FalseUnion.ilk  vc143.idb
FalseUnion/GameEngineSolution/bin-int/Debug-x64/Sandbox/: Sandbox.exe.recipe  Sandbox.ilk  vc143.idb
FalseUnion/src/: Entrypoint.h  FalseUnion.h  fupch.cpp  fupch.h
FalseUnion/src/Engine/Headers/Core/: Application.h  Core.h  Instrumentor.h  KeyCodes.h  Logger.h  MouseCodes.h  Timestep.h  Window.h
FalseUnion/src/Engine/Headers/ECS/: Attribute.h  GameObject.h
FalseUnion/src/Engine/Headers/Events/: ApplicationEvent.h  Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h
FalseUnion/src/Engine/Headers/Graphics/: Buffer.h  Camera.h  Colour.h  GraphicsContext.h  OrthographicCamera.h  RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h  (+4 more)
Headers/Core/: Application.h  Logger.h  Timer.h  Window.h
Headers/ECS/: Attribute.h  GameObject.h
Headers/Graphics/: Colour.h  Shader.h  Texture.h
Headers/Input/: Input.h
Sandbox/: FuPro-Runtime.json  imgui.ini
Sandbox/Assets/Shaders/: FlatColour.glsl  Texture.glsl
Sandbox/src/: Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h
cpp/Core/: Application.cpp  Logger.cpp  Timer.cpp  Window.cpp
cpp/ECS/: Attribute.cpp  GameObject.cpp
cpp/Graphics/: Camera.cpp  Colour.cpp  Renderer.cpp  Shader.cpp  Sprite.cpp  Texture.cpp
cpp/Input/: Input.cpp
cpp/Math/: Vector2.cpp
(+115 files in other folders)
